Bug 348617 - Containment plugin in shell's defaults is ignored
Summary: Containment plugin in shell's defaults is ignored
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-03 05:16 UTC by Bhushan Shah
Modified: 2015-06-03 16:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2015-06-03 05:16:44 UTC
Plasma mediacenter's shell package contains

Containment=org.kde.mediacentercontainment

but when I start plasmashell without any config
org.kde.desktopcontainment is the default one being used.

Instead it should respect the shell/content/defaults and use mediacenter containment

Plasma Active is also affected with this.. it uses desktop containment when used on clean config instead of active containment
Comment 1 Bhushan Shah 2015-06-03 16:32:35 UTC
Git commit 3e42d6ae989e036ccdb19186aa09e06abcf7c9cd by Bhushan Shah.
Committed on 03/06/2015 at 16:32.
Pushed by bshah into branch 'master'.

Fix createActivity not respecting shell package defaults

If containment plugin is provided in the shell package's defaults file
then use it instead of defaulting to desktopcontainment
FIXED-IN: 5.4
REVIEW: 123990

M  +3    -2    shell/scripting/scriptengine.cpp

http://commits.kde.org/plasma-workspace/3e42d6ae989e036ccdb19186aa09e06abcf7c9cd