Fix createActivity not respecting shell package defaults

If containment plugin is provided in the shell package's defaults file
then use it instead of defaulting to desktopcontainment

BUG: 348617
FIXED-IN: 5.4
REVIEW: 123990